--- a/template.Rmd
+++ b/template.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Simple document"
-output: html_document
+title: "p8105_hw1_jr4550"
+output: github_document
 ---
 
 I'm an R Markdown document! 
