--- a/template.Rmd
+++ b/template.Rmd
@@ -8,7 +8,7 @@ I'm an R Markdown document!
 
 ## Problem 1 
 
-#loading moderndive 
+### loading moderndive and early_january_weather dataset 
 
 ```{r setup}
 library(moderndive)
@@ -17,30 +17,37 @@ data("early_january_weather")
 ```
 
 
-#early_january_weather Description
+### early_january_weather Description
            
-Number of rows             358                  
-Number of columns          15 
-The mean of the Temperature is 39.58212
-
+Number of rows = 358           
 ```{r}
-early_january_weather
 nrow(early_january_weather)
+```
+
+Number of columns = 15  
+```{r}
 ncol(early_january_weather)
 ```
 
-```{r}
-skimr::skim(early_january_weather)
-```
-```{r}
-write.csv(early_january_weather, "early_january_weather.csv", row.names = FALSE)
-
-```
+The mean of the Temperature is 39.58212
 ```{r}
 mean(early_january_weather$temp)
 ```
 
-# Scatterplot 
+Variable names and values
+```{r}
+head(
+early_january_weather)
+```
+
+
+```{r}
+write.csv(early_january_weather, "early_january_weather.csv", row.names = FALSE)
+
+```
+
+
+### Scatterplot 
 
 In the scatterplot, from January 1-23, 2013 we see that around January 10th humidity starts to increase. Average temperature during this time was 39.58 fahrenheit. 
 ```{r yx_scatter}
@@ -51,4 +58,42 @@ ggplot(early_january_weather, aes(x = time_hour, y = temp, colour = humid)) +
 ggsave("temp_vs_time.png", width = 8, height = 5)
 ```
 
+## Problem 2
+### Create data frame 
+
+```{r}
+library(tidyverse)
+```
+
+```{r}
+example_df = tibble(
+  vec_numeric = rnorm(10),
+  vec_char = c("My", "name", "is", "Jeff", "and", "I", "am", "taking", "data", "science"),
+  vec_logical = c(TRUE, TRUE, TRUE, FALSE,TRUE, TRUE, TRUE, FALSE,FALSE,FALSE),
+  vec_factor = factor(c("male", "male", "trans", "female","trans", "male", "female", "female","female", "female"))
+)
+```
+
+
+ 
+```{r}
+mean(pull(example_df, vec_numeric))
+mean(pull(example_df, vec_char))
+mean(pull(example_df, vec_logical))
+mean(pull(example_df, vec_factor))
+
+```
+### Converting Varibles to numeric
+
+```{r}
+as.numeric(pull(example_df, vec_char))
+as.numeric(pull(example_df, vec_logical))
+as.numeric(pull(example_df, vec_factor))
+```
+
+```{r}
+mean(as.numeric(pull(example_df, vec_char)))
+mean(as.numeric(pull(example_df, vec_logical)))
+mean(as.numeric(pull(example_df, vec_factor)))
+```
 
